# china-beancount-importers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  dprint.json  mypy.ini  pyproject.toml  readme.md  taskfile.yaml
.chglog/: config.yml
.github/: .codecov.yml  mergify.yml  renovate.json
.github/workflows/: ci.yaml  lint.yaml  release.yaml
china_beancount_importers/: alipay.py  ccb_credit_eml.py  ccb_credit_pdf.py  ccb_debeit.py  cmb_credit_eml.py  cmb_credit_pdf.py  cmb_debeit.py  utils.py  wechat.py
docs/: .readthedocs.yaml  .readthedocs.yml  alipay.rst  ccb_credit_eml.rst  ccb_credit_pdf.rst  ccb_debeit.rst  cmb_credit_eml.rst  cmb_credit_pdf.rst  cmb_debeit.rst  conf.py  index.md  requirements.txt
docs/source/: conf.py  index.rst  wechat.rst
examples/: wechat.import
tests/: cmb_debeit_test.py  test_a.py  utils.py  wechat_test.py
tests/fixtures/wechat/: 微信支付账单(20200830-20200906).csv
